# netport

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: deploy_major.yaml  deploy_minor.yaml  deploy_patch.yaml
.github/workflows/: deploy.yaml  pull_request.yaml  syntax.yaml  test.yaml
netport/: cli.py  common.py  database.py  netport.py
netport/scripts/: cli.py
scripts/: cli.py
src/: butler.py
tests/: conftest.py  test_filesystem.py  test_network.py  test_system.py
