[tool.poetry]
name = "netport"
version = "0.1.0"
description = "Tool for managing resources on a remove machine"
authors = ["Igal Kolihman <https://github.com/IgalKolihman>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^4.3.4"
requests = "^2.28.1"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
psutil = "^5.9.2"

[tool.poetry.group.dev.dependencies]
pytest-repeat = "^0.9.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netport = 'netport.cli:run'
