[tool.poetry]
name = "netport"
version = "0.5.0"
description = "Tool for managing resources on a remove machine using openapi"
authors = ["Igal Kolihman <igalk.spam@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/IgalKolihman/netport"
repository = "https://github.com/IgalKolihman/netport"
keywords = ["manager", "resources", "remote", "managing", "network", "networking", "openapi"]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
include = [
    "LICENSE.md",
    "netport/*",
    "scripts/*"
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.14"
redis = "^5.2.1"
psutil = "^7.0.0"
loguru = "^0.7.3"
fastapi = "^0.115.12"
requests = "^2.28.1"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
anyio = "^4.9.0"
httpx = "^0.28.1"
cleo = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
flake8 = "^5.0.4"
pytest = "^7.1.3"
black = "^22.10.0"
pytest-sugar = "^0.9.5"
pytest-repeat = "^0.9.1"
pytest-clarity = "^1.0.1"
flake8-print = "^5.0.0"

[tool.poetry.group.quality.dependencies]
flake8 = "^5.0.4"

[tool.poetry.group.testing.dependencies]
pytest = "^7.1.3"
pytest-sugar = "^0.9.5"
pytest-repeat = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netport = 'netport.scripts.cli:main'

[tool.pytest.ini_options]
redis = { host = "127.0.0.1", port = "6379", db = "0" }
